# lysa_dev

./: .gitignore  CMakeLists.txt
cmake/: libraries.cmake  shaders.cmake
include/: Libraries.h
res/models/: crates.blend
src/: MainScene.cpp  MainScene.ixx  MyApp.cpp  MyApp.ixx  MyAppMain.cpp
src/nodes/: Crate.cpp  Crate.ixx  Player.cpp  Player.ixx
src/os/: WindowsMain.cpp
src/scenes/: AddRemove.cpp  AddRemove.ixx  AddRemoveNode.cpp  AddRemoveNode.ixx  BaseScene.cpp  BaseScene.ixx  Physics.cpp  Physics.ixx  TrianglesScene.cpp  TrianglesScene.ixx  Vector.cpp  Vector.ixx  ViewAssets.cpp  ViewAssets.ixx  ViewScene.cpp  ViewScene.ixx
src/shaders/: highlight.frag.slang  scale.vert.slang  triangle.frag.slang  triangle.vert.slang  uv_gradient.frag.slang
